--- a/package/phylogenize/inst/rmd/phylogenize-report.Rmd
+++ b/package/phylogenize/inst/rmd/phylogenize-report.Rmd
@@ -130,54 +130,18 @@ taxa that are neither.
 
 mapped.observed <- names(which(Matrix::rowSums(abd.meta$mtx) > 0))
 
-if (pz.options('which_phenotype') == "prevalence") {
-  phenotype <- prev.addw(abd.meta)
-  phenoP <- NULL
-} else if (pz.options('which_phenotype') == "specificity") {
-  if (pz.options('prior_type') == "file") {
-    prior.data <- read.table(file.path(pz.options('input_dir'),
-                                       pz.options('prior_file')))
-  } else {
-    prior.data <- NULL
-  }
-  ess <- calc.ess(abd.meta,
-                  prior.data)
-  phenotype <- ess$ess
-  phenoP <- ess$phenoP
-  # Specifically for specificity, only retain observed taxa
-  pz.db$trees <- retain.observed.taxa(pz.db$trees,
-                                      phenotype,
-                                      phenoP,
-                                      mapped.observed)
-  pz.db$species <- lapply(pz.db$trees, function(x) x$tip.label)
-  pz.db$ntaxa <- length(pz.db$trees)
-} else if (pz.options("which_phenotype") == "provided") {
-  p_tbl <- read_tsv(pz.options("phenotype_file"))
-  if (ncol(p_tbl) == 2) { # assume we only have species IDs and values
-    phenotype <- deframe(p_tbl)
-  } else { # perform shrinkage on the provided values w/ their stderrs
-    p_est <- as.numeric(p_tbl[["estimate"]])
-    p_se <- as.numeric(p_tbl[["stderr"]])
-    names(p_est) <- p_tbl[[1]]
-    names(p_se) <- p_tbl[[1]]
-    ashr_res <- ashr_wrapper(p_est, p_se)
-    phenotype <- ashr_res$result %>%
-      as_tibble(rownames="species") %>%
-      dplyr::select(species, PosteriorMean) %>%
-      deframe
-  }
-} else if (pz.options("which_phenotype") == "abundance") {
-  phenotype <- ashr.diff.abund(abd.meta)
-  phenoP <- 0
-} else {
-  pz.error(paste0("don't know how to calculate the phenotype ",
-                  pz.options('which_phenotype')))
-}
+phenotype_info <- calc.phenotype.interest(abd.meta, pz.db)
+pz.db <- phenotype_info[[1]]
+phenotype <- phenotype_info[[2]]
+phenoP <- phenotype_info[[3]]
 
 phenotype <- clean.pheno(phenotype, pz.db)
 pheno.distros <- plot.pheno.distributions(phenotype, pz.db)
 pheno.scale <- get.pheno.plotting.scales(phenotype, pz.db$trees, phenoP)
 plotted.pheno.trees <- plot.phenotype.trees(phenotype, pz.db$trees, pz.db$taxonomy, pheno.scale)
+
+saveRDS(plotted.pheno.trees, "plotted.pheno.trees.rds")
+pz.error("hit in the rmd script")
 
 # Template for plots
 template <- c(
@@ -196,8 +160,6 @@ write.table(file=file.path(pz.options('out_dir'), "phenotype.tab"),
             phenotype,
             sep = '\t')
 
-# be a little parsimonious with memory here
-rm(abd.meta); gc()
 ```
 `r knitr::knit(text = unlist(plots))`
 ## Phenotype Mapped Across Trees {.tabset}
@@ -210,50 +172,3 @@ if (!pz.options('skip_graphs')) {
 				     label=pz.options('which_phenotype'))
 }
 
-```
-
-### Only mapped/observed taxa {.tabset}
-
-Displays phenotype on trees, with only the mapped/observed taxa plotted.
-
-```{r subtrees_pre, cache=FALSE, echo=FALSE}
-
-pheno.labels <- names(phenotype)
-subtrees <- lapply(pz.db$trees, function(tr) {
-  keep.tips(tr, intersect(mapped.observed, pheno.labels))
-})
-subtrees <- Filter(function(x) {
-  if (is.null(x)) return(FALSE)
-  if (length(x$tip.label) > 2) return(TRUE)
-  return(FALSE)
-}, subtrees)
-
-```
-```{r subtrees, fig.width = 7, fig.height = 20, warning = FALSE, message = FALSE, results="hide", echo=FALSE, fig.keep = 'none', fig.ext='svg', custom.plot=TRUE, fig.num=length(subtrees), cache.lazy = FALSE, cache=FALSE, echo=FALSE}
-
-if (!pz.options('skip_graphs')) {
-  plotted.pheno.subtrees <- plot.phenotype.trees(phenotype,
-                                                 subtrees,
-						 pz.db$taxonomy,
-                                                 pheno.scale)
-  if (!is.null(plotted.pheno.subtrees)) {
-    if (length(plotted.pheno.subtrees) > 0) {
-      plot.labeled.phenotype.trees(plotted.pheno.subtrees,
-                                   100*logistic(phenotype))
-      rmd.message <- ""
-    } else {
-      rmd.message <- "(no taxa had more than one tip)"
-    }
-  } else {
-    rmd.message <- "(no taxa had more than one tip)"
-  }
-}
-
-```
-  # Note, check the actual output directory when we're trying to figure out what
-  # got made
-  if (file.exists(file.path(pz.options('out_dir'), f))) {
-    cat(paste0(' * [**', f, '**](', fp, ')\n'))
-  }
-}
-```
